--- a/tasks/capsule-install.yml
+++ b/tasks/capsule-install.yml
@@ -1,29 +1,29 @@
 ---
 - name: Satellite | Capsule Install | Set Installer TFTP Parameters
   set_fact:
-    satellite_installer_tftp_parameters: >
+    satellite_installer_tftp_parameters: >-
       --foreman-proxy-tftp 'true'
-      --foreman-proxy-tftp-servername '{{ ansible_fqdn }}'
+      --foreman-proxy-tftp-servername {{ ansible_fqdn | quote }}
   when: satellite_installer_enable_tftp | default(False)
 
 - name: Satellite | Capsule Install | Set Installer Remote Execution SSH Parameters
   set_fact:
-    satellite_installer_remote_execution_ssh_parameters: >
+    satellite_installer_remote_execution_ssh_parameters: >-
       --enable-foreman-proxy-plugin-remote-execution-ssh
   when: satellite_installer_enable_remote_execution_ssh | default(False)
 
 - name: Satelllite | Caspule Install | Run Scenario
-  command: >
+  command: >-
     satellite-installer --scenario capsule
-      --foreman-proxy-content-parent-fqdn       '{{ satellite_fqdn }}'
+      --foreman-proxy-content-parent-fqdn       {{ satellite_fqdn | quote }}
       --foreman-proxy-register-in-foreman       'true'
       --foreman-proxy-foreman-base-url          'https://{{ satellite_fqdn }}'
-      --foreman-proxy-trusted-hosts             '{{ satellite_fqdn }}'
-      --foreman-proxy-trusted-hosts             '{{ ansible_fqdn }}'
-      --foreman-proxy-oauth-consumer-key        '{{ satellite_oauth_consumer_key }}'
-      --foreman-proxy-oauth-consumer-secret     '{{ satellite_oauth_consumer_secret }}'
-      --foreman-proxy-content-pulp-oauth-secret '{{ satellite_pulp_oauth_secret }}'
-      --foreman-proxy-content-certs-tar         '{{ satellite_capsule_server_cert_archive }}'
+      --foreman-proxy-trusted-hosts             {{ satellite_fqdn | quote }}
+      --foreman-proxy-trusted-hosts             {{ ansible_fqdn | quote }}
+      --foreman-proxy-oauth-consumer-key        {{ satellite_oauth_consumer_key | quote }}
+      --foreman-proxy-oauth-consumer-secret     {{ satellite_oauth_consumer_secret| quote }}
+      --foreman-proxy-content-pulp-oauth-secret {{ satellite_pulp_oauth_secret | quote }}
+      --foreman-proxy-content-certs-tar         {{ satellite_capsule_server_cert_archive | quote }}
       --puppet-ca-server                        'https://{{ satellite_fqdn }}'
       {{ satellite_installer_tftp_parameters | default('') }}
       {{ satellite_installer_remote_execution_ssh_parameters | default ('') }}
